asm-ig/variant/service-proto-type.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "asm-ingressgateway"
spec:
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http
    port: 80
    targetPort: 8080
  - name: "https"
    port: 443
    targetPort: 8443
    appProtocol: HTTP2
  type: ClusterIP
